2013-08-15  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/find_new_sub_gids.c: Remove dead code.
	find_new_sub_gids() is always called with *range_count set to 0.
	It's more difficult to keep the subordinate GIDs and UIDs
	synchronized, than for the user's UID/GId because the count of
	subordinate IDs may differ.
	* libmisc/find_new_sub_uids.c: Likewise.
	* lib/subordinateio.h, lib/subordinateio.c: Remove APIs that are
	no more needed: is_sub_uid_range_free(), is_sub_gid_range_free(),
	is_range_free().

2013-08-13  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Check if sizeof uid_t and gid_t is larger than 32
	bit to support subordinate IDs.

2013-08-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/subordinateio.c: Avoid dead branches.
	* lib/subordinateio.c: Add schematics with ranges to help reviews.
	* lib/subordinateio.c: Avoid implicit conversion of pointers and
	integers to booleans.
	* lib/subordinateio.c: Added brackets.

2013-08-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/vipw.c: Fail in case arguments are provided after options.
	Debian#677812

2013-08-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/subordinateio.c: Fix count for ranges truncated in
	remove_range().

2013-08-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Terminate the child (if needed) before closing the PAM
	session. This is probably more correct, and avoid reporting
	termination from signals possibly sent by PAM modules (e.g. former
	versions of pam_systemd). Debian#670132

2013-08-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: When a SIGTSTP is caught, reset caught to 0. There is
	no need to kill the child in such case after su is resumed. This
	remove the "Session terminated, terminating shell...
	...terminated." messages in such case.

2013-08-13  Nicolas François  <nicolas.francois@centraliens.net>
